--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "xmldom": "0.1.19"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-nodeunit": "0.4.1",
-    "grunt-eslint": "2.1.0"
+    "grunt": ">=0.4.5",
+    "grunt-contrib-clean": ">=0.6.0",
+    "grunt-contrib-nodeunit": ">=0.4.1",
+    "grunt-eslint": ">=2.1.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4.5"
+    "grunt": ">=0.4.5"
   },
   "keywords": [
     "grunt",
